Bamadeb: News Feed

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <script type="text/javascript" src="js/categoryController.js"></script>
 <script type="text/javascript" src="js/industryController.js"></script>
 <script type="text/javascript" src="js/educateController.js"></script>
-<script type="text/javascript" src="js/testController.js"></script>
+<script type="text/javascript]" src="js/testController.js"></script>
 <script type="text/javascript" src="js/galleryController.js"></script>
 <script type="text/javascript" src="js/changepswController.js"></script>
 <script type="text/javascript" src="js/FollowingcompanyController.js"></script>
@@ -139,6 +139,8 @@
 <script type="text/javascript" src="js/PopupCont.js"></script>
 <script type="text/javascript" src="js/applieduserController.js"></script>
 <script type="text/javascript" src="js/viewuserController.js"></script>
+<script type="text/javascript" src="js/postsController.js"></script>
+<script type="text/javascript" src="js/postsDetailsController.js"></script>
 <!-- controller end -->
 
 <!-- services start -->
